2009-06-16  Sander van Dijk  <sgvandijk@gmail.com>

  * simspark/main.cpp
  - simspark can take command line argument specifying the rb script to run
  (Simon Raffeiner)
  
  * plugin/soccermonitor/soccerinput.cpp
  * plugin/soccermonitor/soccerinput.h
  * rcssmonitor3d/soccerbindings.rb
  - new soccer input command to give kick-off to the team on the right (bound
  to 'j') (Simon Raffeiner)
  
2009-06-15  Sander van Dijk  <sgvandijk@gmail.com>

  * plugin/soccer/ballstateaspect/ballstateaspect.h
  * plugin/soccer/ballstateaspect/ballstateaspect.cpp
  * data/rsg/agent/nao/goal.rsg
  - change goal and out-of-field checks to only accept when ball is
  completely over the line
  
2009-04-30  Sander van Dijk  <sgvandijk@gmail.com>

	* rcssmonitor3d/rcssmonitor3d.rb
	- set camera parameters to those used in internal monitor
	
	* plugin/soccermonitor/soccerinputlogplayer.h
	* plugin/soccermonitor/soccerinputlogplayer.cpp
	* rcssmonitor3d/soccerbindings.rb
	- add camera controls to external monitor

2009-04-08  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/soccer/beameffector/beamaction.h (BeamAction): 
	- fixed const function declaration
	
	* plugin/soccer/soccerbase/soccerbase.cpp (SoccerBase::MoveAgent): 
	- removed useless statements
	
	* plugin/soccer/kickeffector/kickaction.h: 
	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp:
	- fixed variables order in ctor
	 
	* plugin/soccer/visionperceptor/visionperceptor.h: 
	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.h:
	- added missing return statement 

2009-03-05  Hedayat Vatankhah  <hedayat@grad.com>

	* linux/rcssserver3d.desktop:
	- updated the icon name
	 
	* data/logos/simspark.png:
	* data/logos/simsparklogo.png:
	* data/logos/simsparklogo2.png:
	- added simspark logos created by Joschka, and a 48x48 version of
	  simsparklogo.png which can be used as an icon

2009-02-09  Hedayat Vatankhah  <hedayat@grad.com>

	* doc/users/user-manual.tex: 
	* doc/users/simspark.tex: 